# serco

./: Cargo.toml  README.md
serco/: Cargo.toml
serco-common/: Cargo.toml
serco-common/src/: lib.rs
serco/examples/: callback.rs
serco/src/: lib.rs
serco_derive/: Cargo.toml
serco_derive/src/: lib.rs
serco_mpsc/: Cargo.toml
serco_mpsc/src/: lib.rs
test/test_service/: Cargo.toml
test/test_service/src/: main.rs
