[package]
name = "serco"
version = "0.1.0"
authors = ["Mikko Rantanen <jubjub@jubjubnest.net>"]

[dependencies]
serco_derive = { version = "0.1", path = "../serco_derive" }
serde = "1.0"
serde_derive = "1.0"
futures = "0.1"

[dev-dependencies]
serde_json = "1.0"
tokio-core = "0.1"
tokio = "0.1"
serco_mpsc = { version = "0.1", path = "../serco_mpsc" }
